deploy/k8s/sso-service/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    app: ecommerce-platform
