deploy/k8s/sso-service/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-service
  namespace: ecommerce
  labels:
    app: sso-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sso-service
  template:
    metadata:
      labels:
        app: sso-service
    spec:
      # Секрет для доступа к Yandex Container Registry
      imagePullSecrets:
        - name: yc-registry-secret
      
      containers:
        - name: sso-service
          image: cr.yandex/crphjp07nodds7bvd5ar/ecommerce-sso-service:latest
          imagePullPolicy: Always
          
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 50051
          
          # Переменные окружения из ConfigMap
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
